Configure everything for port 80

--- a/public/event.html
+++ b/public/event.html
@@ -14,7 +14,7 @@
 <h1 class="center-align">Add a event</h1>
 
 <div class="row">
-    <form class="col s12" method="post" action="http://localhost:6868/event" enctype="multipart/form-data">
+    <form class="col s12" method="post" action="/event" enctype="multipart/form-data">
 
         <div class="input-field col s6">
             <input name="name" id="name" type="text" class="validate">
