--- a/public/school.html
+++ b/public/school.html
@@ -16,7 +16,7 @@
     <h1 class="center-align">Add a school</h1>
 
     <div class="row">
-        <form class="col s12" method="post" action="http://localhost:6868/school" enctype="multipart/form-data">
+        <form class="col s12" method="post" action="/school" enctype="multipart/form-data">
 
             <div class="input-field col s6">
                 <input name="name" id="name" type="text" class="validate">
