--- a/public/tuition.html
+++ b/public/tuition.html
@@ -16,7 +16,7 @@
     <h1 class="center-align">Add a tuition</h1>
 
     <div class="row">
-        <form class="col s12" method="post" action="http://localhost:6868/tuition" enctype="multipart/form-data">
+        <form class="col s12" method="post" action="/tuition" enctype="multipart/form-data">
 
             <div class="input-field col s6">
                 <input name="name" id="name" type="text" class="validate">
