--- a/public/school.html
+++ b/public/school.html
@@ -13,10 +13,17 @@
 
 <div class="container">
 
+    <div id="school_added_modal" class="modal">
+        <div class="modal-content">
+            <h4>School Added</h4>
+            <p>Keep going</p>
+        </div>
+    </div>
+
     <h1 class="center-align">Add a school</h1>
 
     <div class="row">
-        <form class="col s12" method="post" action="/school" enctype="multipart/form-data">
+        <form id="the_form" class="col s12" action="/school" method="post" enctype="multipart/form-data">
 
             <div class="input-field col s6">
                 <input name="name" id="name" type="text" class="validate">
