--- a/public/school.html
+++ b/public/school.html
@@ -23,7 +23,8 @@
     <h1 class="center-align">Add a school</h1>
 
     <div class="row">
-        <form id="the_form" class="col s12" action="/school" method="post" enctype="multipart/form-data">
+        <form id="the_form" class="col s12" action="http://localhost:8080/school" method="post"
+              enctype="multipart/form-data">
 
             <div class="input-field col s6">
                 <input name="name" id="name" type="text" class="validate">
@@ -31,13 +32,30 @@
             </div>
 
             <div class="input-field col s6">
-                <input name="facilities" id="facilities" type="text" class="validate">
+                <select id="facilities" name="facilities" multiple>
+                    <option value="" disabled>Choose your option</option>
+                    <option value="Library/Study Area">Library/Study Area</option>
+                    <option value="Smart Classes">Smart Classes</option>
+                    <option value="Study Material">Study Material</option>
+                    <option value="AC Classes">AC Classes</option>
+                    <option value="Internet/WIFI">Internet/WIFI</option>
+                    <option value="Transport">Transport</option>
+                    <option value="E-Learning">E-Learning</option>
+                </select>
                 <label for="facilities">Facilities</label>
             </div>
 
             <div class="input-field col s6">
-                <input name="activities" id="activities" type="text" class="validate">
-                <label for="activities">Activities</label>
+                <select id="category" name="category" multiple>
+                    <option value="" disabled>Choose your option</option>
+                    <option value="Library/Study Area">Tuition Centers</option>
+                    <option value="Coaching Centers">Coaching Centers</option>
+                    <option value="Enhanced Learning">Enhanced Learning</option>
+                    <option value="Hobby Centers">Hobby Centers</option>
+                    <option value="Sports Center">Sports Center</option>
+                    <option value="Education Companies">Education Companies</option>
+                </select>
+                <label for="category">Category</label>
             </div>
 
             <div class="input-field col s6">
@@ -51,7 +69,7 @@
             </div>
 
             <div class="input-field col s6">
-                <select id="type">
+                <select id="type" name="type">
                     <option value="" disabled selected>Choose your option</option>
                     <option value="CBSE">Day School</option>
                     <option value="ICSE">Boarding School</option>
@@ -61,16 +79,11 @@
             </div>
 
             <div class="input-field col s6">
-                <input name="principal" id="principal_name" type="text" class="validate">
+                <input name="principalName" id="principal_name" type="text" class="validate">
                 <label for="principal_name">Principal's Name</label>
             </div>
 
-            <div class="input-field col s12">
-                <input name="description" id="description" type="text" class="validate">
-                <label for="description">Description</label>
-            </div>
-
-            <div class="input-field col s12">
+            <div class="input-field col s6">
                 <select name="curriculum" id="curriculum">
                     <option value="" disabled selected>Choose your option</option>
                     <option value="CBSE">CBSE</option>
@@ -82,6 +95,10 @@
                 <label for="curriculum">Curriculum</label>
             </div>
 
+            <div class="input-field col s12">
+                <input name="description" id="description" type="text" class="validate">
+                <label for="description">Description</label>
+            </div>
 
             <h4 class="col s12">Location:</h4>
 
@@ -263,8 +280,37 @@
                     <input type="file" name="schoolCoverPic">
                 </div>
                 <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text" placeholder="Upload profile picture">
+                    <input class="file-path validate" type="text" placeholder="Upload cover picture">
                 </div>
+            </div>
+
+
+            <div class="s12" id="holder">
+                <div class="input-field col s4">
+                    <input type="text" name="title" id="title" placeholder="write something about result">
+                    <label for="title"> Past Result </label>
+                </div>
+
+                <div class="file-field input-field col s12">
+                    <div class="btn">
+                        <span>Past Results Pic</span>
+                        <input type="file" name="img_path">
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text" placeholder="Upload picture">
+                    </div>
+                </div>
+            </div>
+            <button class="btn s12" onclick="addNextImgNText()"> + </button>
+
+
+            <div class="input-field col s4">
+                <h6>Gallery images</h6>
+                <span id="responce">
+                <input name="imgBox0" id="imgBox0" type="file" class="validate">
+            </span>
+
+                <button onclick="addNextImg()">+</button>
             </div>
 
             <button class="btn waves-effect waves-light col s12 center-align" type="submit">Submit
@@ -278,6 +324,8 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-<script src="code.js"></script>
+<script src="assets/js/code.js"></script>
+<script src="assets/js/school.js"></script>
+</body>
 </body>
 </html>
