host public folder

--- a/public/school.html
+++ b/public/school.html
@@ -23,7 +23,7 @@
     <h1 class="center-align">Add a school</h1>
 
     <div class="row">
-        <form id="the_form" class="col s12" action="http://localhost:8080/school" method="post"
+        <form id="the_form" class="col s12" action="/school" method="post"
               enctype="multipart/form-data">
 
             <div class="input-field col s6">
