--- a/public/tuition.html
+++ b/public/tuition.html
@@ -23,7 +23,7 @@
     <h1 class="center-align">Add a tuition</h1>
 
     <div class="row">
-        <form id="the_form" class="col s12" method="post" action="http://localhost:6868/tuition"
+        <form id="the_form" class="col s12" method="post" action="/tuition"
               enctype="multipart/form-data">
 
             <div class="input-field col s6">
